--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
         </title>
     </head>
     <body>
-        <script src="main.js"></script>
+        <script src="main.js" defer></script>
+        <div>
+            <button id="btn1" value="rock">rock</button>
+            <button id="btn2"  value="paper">paper</button>
+            <button id="btn3"  value="scissors">Scissors</button>
+        </div>
+        <div id="showcase">
+            
+        </div>
     </body>
 </html>
